Feat(fxml): Ajout d'une 2e colonne, du choix d'instrument et d'effet, la possibilité d'éditer les colonne, le piano fait du son